Update AlertRuleController.java